fix post image being too big

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -393,10 +393,9 @@ POST/ARTICLE HEADERS
   ARTICLE/POST LOOK-N-FEEL
 
 *****************************************/
-p > img {
+p > img, .post-content img {
     max-width: 100%;
 }
-
 
 .post-content > h1 {
   	font-size: 210%;
